# gdice

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
data/: com.github.fluks-eos.gdice.desktop.in  com.github.fluks-eos.gdice.gschema.xml  gdice.css  gdice.glade
data/128/: Makefile.am
data/32/: Makefile.am
data/48/: Makefile.am
data/64/: Makefile.am
debian/: changelog  control  copyright
po/: POTFILES.in  com.github.fluks-eos.gdice.pot  fi.po
res/: Makefile.am  com.github.fluks-eos.gdice.appdata.xml
src/: Makefile.am  main.c
